Fix size of search button on mobile

--- a/client/src/components/banner.css
+++ b/client/src/components/banner.css
@@ -16,7 +16,6 @@
   border:#e0860b solid 1px;
   background-color:transparent;
   text-decoration:none;
-  width:3%;
 }
 
 #searchbutton:hover{
